interface Forma {
    double calcularArea();
}